show blocked list notice when no results on load; a temp fix

--- a/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.scss
+++ b/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.scss
@@ -17,6 +17,7 @@
     .m-shadowboxSubmitButton__status--saving {
       span {
         @include m-theme() {
+          // Color of the animated circles
           background-color: themed($m-white);
         }
       }
