--- a/src/stylesheets/components/form.scss
+++ b/src/stylesheets/components/form.scss
@@ -24,37 +24,44 @@
     }
   }
 
-  .m-formLayout--buttonLeft,
-  .m-formLayout--buttonRight {
-    .m-form__fieldsContainer {
-      margin-bottom: 38px;
-    }
-
-    .m-form__buttonsContainer {
-      margin-top: 25px;
-      margin-bottom: 57px;
-    }
-
-    .stretchedField {
-      .m-form__row--input {
-        flex-flow: row nowrap;
+  [class*='m-formLayout--'] {
+    &:not(.m-formLayout--buttonInline) {
+      .m-form__fieldsContainer {
+        margin-bottom: 38px;
       }
 
-      .m-form__row--validation {
-        justify-content: flex-end;
-        align-self: unset;
+      .m-form__buttonsContainer {
+        margin-top: 25px;
+        margin-bottom: 57px;
       }
-    }
-    @media screen and (max-width: $max-mobile) {
-      .m-form__row--label m-tooltip {
-        .m-tooltip--bubble {
-          right: 12px;
+
+      .stretchedField {
+        .m-form__row--label m-tooltip {
+          .m-tooltip--bubble {
+            right: 12px;
+          }
+        }
+        .m-form__row--input {
+          flex-flow: row nowrap;
+        }
+
+        .m-form__row--validation {
+          justify-content: flex-end;
+          align-self: unset;
+        }
+      }
+      @media screen and (max-width: $max-mobile) {
+        .m-form__row--label m-tooltip {
+          .m-tooltip--bubble {
+            right: 12px;
+          }
         }
       }
     }
   }
 
-  .m-formLayout--buttonRight {
+  .m-formLayout--buttonRight,
+  .m-formLayout--buttonOffsetRight {
     .m-form__buttonsContainer {
       justify-content: flex-end;
     }
@@ -66,19 +73,42 @@
     }
   }
 
+  // The button is right-aligned and field
+  // widths are 160px less than 100%
+  // (except on mobile, where everything is 100%)
+  .m-formLayout--buttonOffsetRight {
+    .stretchedField {
+      label,
+      input:not(.m-phoneInput__input),
+      minds-country-input,
+      m-phoneInput,
+      textarea,
+      .m-dateDropdowns__selectWrapper,
+      select:not(.m-dateDropdowns__select),
+      .m-form__row--validation {
+        flex: 1 1 calc(100% - 160px);
+        min-width: calc(100% - 160px);
+        max-width: calc(100% - 160px);
+        @media screen and (max-width: $max-mobile) {
+          flex: 1 1 100%;
+          min-width: 100%;
+          max-width: 100%;
+        }
+      }
+      .m-form__row--label m-tooltip {
+        .m-tooltip--bubble {
+          left: 12px;
+        }
+      }
+    }
+  }
+
   ////////////////////////////////////////////
   // FORM ////////////////////////////////////
   ////////////////////////////////////////////
   form {
     margin: 0;
     padding: 0;
-    .stretchedField {
-      .m-form__row--label m-tooltip {
-        .m-tooltip--bubble {
-          right: 12px;
-        }
-      }
-    }
   }
 
   .m-form__fieldsContainer {
@@ -87,7 +117,18 @@
 
   .m-form__fieldGroupSpacer {
     width: 100%;
-    height: 48px;
+    padding: 18px 0 30px 0;
+    hr {
+      @include m-theme() {
+        color: themed($m-borderColor--secondary);
+      }
+    }
+  }
+
+  .m-form__fieldGroupWrapper {
+    &:not(first-child) {
+      margin-top: 60px;
+    }
   }
 
   ////////////////////////////////////////////
@@ -123,6 +164,16 @@
       }
       .m-form__row--input {
         flex-flow: row nowrap;
+
+        &.hasUnitLabel {
+          align-items: center;
+          input {
+            min-width: 0;
+          }
+          span {
+            margin-right: 8px;
+          }
+        }
       }
       .m-form__row--validation {
         align-self: flex-end;
@@ -150,7 +201,7 @@
   }
   ////////////////////////////////////////////
   // FIELD -- TEXT  //////////////////////////
-  // Includes textarea as well ///////////////
+  // Includes textareas as well as inputs ////
   ////////////////////////////////////////////
   input[type='text'],
   input[type='number'],
@@ -465,6 +516,11 @@
 
     @include m-theme() {
       color: themed($m-textColor--primary);
+    }
+    &::placeholder {
+      @include m-theme() {
+        color: themed($m-textColor--tertiary);
+      }
     }
   }
   ////////////////////////////////////////////
