--- a/src/app/modules/settings-v2/account/password/password.component.html
+++ b/src/app/modules/settings-v2/account/password/password.component.html
@@ -1,6 +1,6 @@
 <form *ngIf="form" [formGroup]="form" class="m-formLayout--buttonRight">
   <div class="m-form__fieldsContainer">
-    <div class="m-form__field--text stretchedField">
+    <div class="m-form__field--text stretchedField hasValidationRow">
       <div class="m-form__row--label">
         <label for="name" i18n>Existing Password</label>
       </div>
@@ -26,19 +26,12 @@
         </p>
       </div>
     </div>
+    <div class="m-form__fieldGroupSpacer"></div>
     <div class="m-form__field--text stretchedField">
       <div class="m-form__row--label">
         <label for="name" i18n>New Password</label>
       </div>
-      <div
-        class="m-form__row--input"
-        [ngClass]="{
-          invalid:
-            newPassword.dirty &&
-            !newPassword.hasError('required') &&
-            !newPasswordValid
-        }"
-      >
+      <div class="m-form__row--input">
         <m-popover (change)="onPopoverChange($event)" #popover>
           <input
             type="password"
@@ -53,19 +46,8 @@
           />
         </m-popover>
       </div>
-      <div class="m-form__row--validation">
-        <p
-          *ngIf="
-            newPassword.dirty &&
-            !newPassword.hasError('required') &&
-            !newPasswordValid
-          "
-        >
-          Invalid password format.
-        </p>
-      </div>
     </div>
-    <div class="m-form__field--text stretchedField">
+    <div class="m-form__field--text stretchedField hasValidationRow">
       <div class="m-form__row--label">
         <label for="name" i18n>Confirm New Password</label>
       </div>
@@ -73,7 +55,8 @@
         class="m-form__row--input"
         [ngClass]="{
           invalid:
-            (confirmNewPassword.touched || confirmNewPassword.dirty) &&
+            confirmNewPassword.touched &&
+            confirmNewPassword.dirty &&
             confirmNewPassword.invalid
         }"
       >
@@ -90,7 +73,8 @@
       <div class="m-form__row--validation">
         <p
           *ngIf="
-            (confirmNewPassword.touched || confirmNewPassword.dirty) &&
+            confirmNewPassword.touched &&
+            confirmNewPassword.dirty &&
             confirmNewPassword.hasError('passwordMatch')
           "
         >
