--- a/src/app/common/layout/nested-menu/nested-menu.component.scss
+++ b/src/app/common/layout/nested-menu/nested-menu.component.scss
@@ -7,14 +7,16 @@ m-nestedMenu {
     line-height: 21px;
     font-weight: 300;
     min-height: 100vh;
-    padding-bottom: 60px;
+    // padding-bottom: 60px;
     height: 100%;
 
     @include m-theme {
       border-right: 1px solid themed($m-borderColor--primary);
     }
-    @media screen and (max-width: $max-mobile) {
+    @media screen and (max-width: $layoutMax2ColWidth) {
       width: 100%;
+    }
+    @media screen and (max-width: $max-mobile) {
       @include m-theme {
         border-right: none;
       }
@@ -26,6 +28,9 @@ m-nestedMenu {
       .m-nestedMenu__headerWrapper {
         line-height: 20px;
       }
+    }
+    &:last-child {
+      padding-bottom: 60px;
     }
 
     & > * {
@@ -45,19 +50,19 @@ m-nestedMenu {
     font-weight: 400;
     padding: 17px 18px;
 
-    @media screen and (max-width: $max-mobile) {
+    @media screen and (max-width: $layoutMax2ColWidth) {
       padding: 19px 24px 22px 24px;
     }
 
     .m-nestedMenu__backButton {
-      margin: 0 0 6px -1px;
+      margin: 0 0 6px 0;
       font-size: 15px;
 
       line-height: inherit;
       display: none;
 
       transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
-      @media screen and (max-width: $max-mobile) {
+      @media screen and (max-width: $layoutMax2ColWidth) {
         display: inline-block;
       }
       a {
@@ -92,7 +97,7 @@ m-nestedMenu {
       @include m-theme() {
         color: themed($m-textColor--primary);
       }
-      @media screen and (max-width: $max-mobile) {
+      @media screen and (max-width: $layoutMax2ColWidth) {
         font-size: 24px;
         line-height: 32px;
       }
@@ -107,7 +112,7 @@ m-nestedMenu {
     align-items: center;
     text-decoration: none;
     font-weight: 400;
-    transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+    transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
     @include m-theme {
       color: themed($m-textColor--secondary);
     }
@@ -131,8 +136,32 @@ m-nestedMenu {
       }
     }
 
-    @media screen and (max-width: $max-mobile) {
+    @media screen and (max-width: $layoutMax2ColWidth) {
       padding: 14px 24px;
+      &.m-nestedMenu__itemWrapper--active {
+        &.disableActiveClass {
+          @include m-theme {
+            color: themed($m-textColor--secondary);
+            background-color: rgba(themed($m-black), 0);
+          }
+          i {
+            @include m-theme {
+              color: themed($m-textColor--tertiary);
+            }
+          }
+        }
+        &:hover:not(.disableActiveClass) {
+          @include m-theme() {
+            color: themed($m-textColor--primary);
+            background-color: themed($m-borderColor--primary);
+          }
+          i {
+            @include m-theme {
+              color: themed($m-textColor--primary);
+            }
+          }
+        }
+      }
     }
   }
 }
