--- a/src/app/modules/settings-v2/settings-v2.component.scss
+++ b/src/app/modules/settings-v2/settings-v2.component.scss
@@ -2,6 +2,20 @@ m-settingsV2 {
   grid-area: content / span 2;
   min-width: 0;
 
+  m-nestedMenu {
+    &.m-pageLayout__pane--right {
+      @include m-theme {
+        border-left: none;
+      }
+    }
+  }
+
+  m-draggableList {
+    @include m-theme {
+      box-shadow: none;
+    }
+  }
+
   .m-settingsV2 {
     display: flex;
     font-weight: 300;
@@ -10,18 +24,18 @@ m-settingsV2 {
       @media screen and (max-width: $layoutMax2ColWidth) {
         display: none;
         flex-grow: 1;
-        &.showMainMenuOnMobile {
+        &.onMainNav {
           display: block;
         }
       }
     }
 
     .m-settingsV2__secondaryPane {
-      flex: 1 0 340px;
+      flex: 1 1 340px;
       max-width: 637px;
       @media screen and (max-width: $layoutMax2ColWidth) {
         display: none;
-        &.showSecondaryMenuOnMobile {
+        &.onSecondaryNav {
           display: block;
         }
       }
@@ -139,7 +153,8 @@ m-settingsV2 {
     .m-formWrapper .m-form__fieldsContainer {
       input,
       select,
-      textarea {
+      textarea,
+      label.m-form__colorPreview {
         @include m-theme() {
           box-shadow: none;
         }
@@ -147,12 +162,14 @@ m-settingsV2 {
     }
 
     m-settingsV2__password {
-      .m-form__field--text {
-        &:first-child {
-          margin-bottom: 48px;
-        }
-        &:nth-child(2) {
-          margin-bottom: 2px;
+      .m-formWrapper {
+        .m-form__field--text {
+          // &:first-child {
+          //   margin-bottom: 48px;
+          // }
+          &:nth-child(2) {
+            margin-bottom: 2px;
+          }
         }
       }
     }
@@ -183,6 +200,30 @@ m-settingsV2 {
     m-settingsV2__emailNotifications {
       .m-form__field--checkbox:not(:last-child) {
         margin-bottom: 10px;
+      }
+    }
+
+    // m-form__filePreview
+    .m-form__filePreview--logo {
+      padding: 16px;
+      > img {
+        max-width: 100%;
+        max-height: 100px;
+        object-fit: contain;
+      }
+    }
+
+    .m-form__filePreview--background {
+      width: 480px;
+      height: 270px;
+
+      @include m-theme() {
+        background: rgba(themed($m-black-always), 0.3);
+      }
+      > img {
+        width: 480px;
+        height: 270px;
+        object-fit: cover;
       }
     }
 
