(chore): various tweaks to new ui

--- a/src/app/modules/comments/entity-outlet/entity-outlet.component.html
+++ b/src/app/modules/comments/entity-outlet/entity-outlet.component.html
@@ -11,7 +11,7 @@
     *ngIf="count > 0"
     (click)="openFullComments()"
   >
-    Show {{ count }} comment{{ count > 1 ? 's' : '' }}
+    View {{ count }} comment{{ count > 1 ? 's' : '' }}
   </div>
 
   <m-comment__poster
