--- a/src/app/modules/newsfeed/activity/content/content.component.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.scss
@@ -59,15 +59,17 @@ m-activity__content {
 
 .m-activityContent__message,
 .m-activityContent__mediaDescription {
+  white-space: pre-line;
+  word-break: break-word;
   @include m-theme() {
-    color: themed($m-textColor--secondary);
+    color: themed($m-textColor--primary);
   }
 
   a {
     text-decoration: none;
     // font-weight: 600;
     @include m-theme() {
-      color: themed($m-textColor--tertiary);
+      color: themed($m-textColor--secondary);
     }
 
     &:hover {
