(feat): unmute autoplayed video when clicking (fix): add more playr methods to MindsVideoplayerComponent

--- a/src/app/modules/groups/profile/feed/legacy.html
+++ b/src/app/modules/groups/profile/feed/legacy.html
@@ -40,6 +40,7 @@
       [slot]="i + 1"
       class="mdl-card item"
       [attr.data-minds-activity-guid]="activity.guid"
+      [allowAutoplayOnScroll]="true"
     >
     </minds-activity>
 
@@ -51,6 +52,7 @@
       (deleted)="delete(a)"
       [slot]="i + (pinned?.length || 0) + 1"
       [attr.data-minds-activity-guid]="a.guid"
+      [allowAutoplayOnScroll]="true"
     >
       <!-- Menu Actions -->
       <li
