--- a/src/app/modules/groups/profile/feed/sorted.component.html
+++ b/src/app/modules/groups/profile/feed/sorted.component.html
@@ -65,6 +65,7 @@
           [attr.data-minds-activity-guid]="entity.guid"
           [disableBoosting]="group['membership'] === 0"
           [disableReminding]="group['membership'] === 0"
+          [allowAutoplayOnScroll]="true"
         >
           <!-- Menu Actions -->
 
