--- a/src/app/modules/groups/profile/review/review.component.html
+++ b/src/app/modules/groups/profile/review/review.component.html
@@ -9,6 +9,7 @@
         (deleted)="delete(entity)"
         [hideTabs]="true"
         [attr.data-minds-activity-guid]="entity.guid"
+        [allowAutoplayOnScroll]="true"
       >
         <!-- Menu Actions -->
 
