--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -21,6 +21,7 @@
         [displayOptions]="{
           showOnlyCommentsInput: true
         }"
+        [allowAutoplayOnScroll]="true"
       ></m-activity>
     </ng-container>
     <ng-template #legacyActivity>
@@ -29,6 +30,7 @@
         [boostToggle]="preActivity.boostToggle"
         (deleted)="delete(preActivity)"
         [showRatingToggle]="true"
+        [allowAutoplayOnScroll]="true"
         class="mdl-card m-border item"
         [attr.minds-data-activity-guid]="preActivity.guid"
       ></minds-activity>
@@ -57,6 +59,7 @@
         [displayOptions]="{
           showOnlyCommentsInput: true
         }"
+        [allowAutoplayOnScroll]="true"
       ></m-activity>
     </ng-container>
     <ng-template #legacyActivity>
@@ -69,6 +72,7 @@
         [showRatingToggle]="true"
         [slot]="i + 1"
         [attr.data-minds-activity-guid]="activity.guid"
+        [allowAutoplayOnScroll]="true"
       ></minds-activity>
     </ng-template>
   </ng-container>
