--- a/src/app/modules/newsfeed/feeds/tags/tags.component.html
+++ b/src/app/modules/newsfeed/feeds/tags/tags.component.html
@@ -8,6 +8,7 @@
     class="mdl-card m-border item"
     [slot]="i + 1"
     [attr.data-minds-activity-guid]="activity.guid"
+    [allowAutoplayOnScroll]="true"
   ></minds-activity>
   <infinite-scroll
     distance="25%"
