--- a/src/app/modules/channels/feed/feed.html
+++ b/src/app/modules/channels/feed/feed.html
@@ -21,6 +21,7 @@
     (deleted)="delete($event)"
     [slot]="i + 1"
     [attr.data-minds-activity-guid]="activity.guid"
+    [allowAutoplayOnScroll]="true"
   ></minds-activity>
   <minds-activity
     *ngFor="let activity of feed; let i = index"
@@ -30,6 +31,7 @@
     (deleted)="delete($event)"
     [slot]="i + (pinned?.length || 0) + 1"
     [attr.data-minds-activity-guid]="activity.guid"
+    [allowAutoplayOnScroll]="true"
   ></minds-activity>
   <infinite-scroll
     distance="25%"
