--- a/src/app/modules/channels/sorted/sorted.component.html
+++ b/src/app/modules/channels/sorted/sorted.component.html
@@ -41,6 +41,7 @@
         [entity]="entity | async"
         (deleted)="delete($event)"
         [slot]="i + 1"
+        [allowAutoplayOnScroll]="true"
       ></m-newsfeed__entity>
     </ng-template>
 
