--- a/src/app/modules/newsfeed/activity/remind/remind.component.html
+++ b/src/app/modules/newsfeed/activity/remind/remind.component.html
@@ -3,5 +3,7 @@
 
   <m-activity__content
     *ngIf="service.shouldShowContent$ | async"
+    [allowAutoplayOnScroll]="allowAutoplayOnScroll"
+    [autoplayVideo]="autoplayVideo"
   ></m-activity__content>
 </ng-container>
