--- a/src/app/modules/newsfeed/feeds/sorted.component.html
+++ b/src/app/modules/newsfeed/feeds/sorted.component.html
@@ -54,6 +54,7 @@
         <m-newsfeed__entity
           [entity]="entity"
           [slot]="i + 1"
+          [allowAutoplayOnScroll]="true"
         ></m-newsfeed__entity>
       </ng-container>
     </ng-container>
