--- a/src/app/modules/newsfeed/feeds/top.component.html
+++ b/src/app/modules/newsfeed/feeds/top.component.html
@@ -10,6 +10,7 @@
     [slot]="i + 1"
     class="mdl-card m-border item"
     [attr.data-minds-activity-guid]="activity.guid"
+    [allowAutoplayOnScroll]="true"
   ></minds-activity>
   <infinite-scroll
     distance="25%"
