--- a/src/app/modules/settings/reported-content/reported-content.component.html
+++ b/src/app/modules/settings/reported-content/reported-content.component.html
@@ -1,3 +1,3 @@
-<div class="m-settings--section m-border">
+<div [ngClass]="{ 'm-settings--section m-border': !hasNewNav }">
   <m-report-console></m-report-console>
 </div>
