--- a/src/stylesheets/components/form.scss
+++ b/src/stylesheets/components/form.scss
@@ -354,59 +354,19 @@
   ////////////////////////////////////////////
   // FIELD -- ASSET //////////////////////////
   ////////////////////////////////////////////
-  [class*='m-form__filePreview'] {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
-    border-radius: 2px;
-    cursor: pointer;
-    margin: 0;
+  input[type='file'] {
     @include m-theme() {
-      box-shadow: 0 1px 4px 0 rgba(themed($m-black), 0.1);
+      background-color: themed($m-bgColor--primary);
+      box-shadow: 0 0 0 0 rgba(themed($m-black), 0) !important;
+      border: 1px solid rgba(themed($m-black), 0) !important;
     }
-
-    &[class*='Overlay'] {
-      opacity: 0;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 5;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: opacity 0.5s cubic-bezier(0.23, 1, 0.32, 1);
-      @include m-theme() {
-        background: rgba(themed($m-black-always), 0.4);
-      }
-      &:hover {
-        opacity: 1;
-      }
-      &.m-form__filePreviewOverlay--show {
-        opacity: 0.6;
-        &:hover {
-          opacity: 1;
+    &:focus {
+      &:not(:read-only) {
+        @include m-theme() {
+          border-color: rgba(themed($m-black), 0) !important;
         }
       }
     }
-
-    > i.material-icons {
-      font-size: 3em;
-      @include m-theme() {
-        color: themed($m-white-always);
-      }
-    }
-  }
-  input[type='file'] {
-    position: absolute;
-    -webkit-appearance: none;
-    width: 0.1px;
-    height: 0.1px;
-    z-index: -1;
-    opacity: 0.01;
-    top: -1px;
-    left: -1px;
   }
   ////////////////////////////////////////////
   // FIELD -- COLOR  /////////////////////////
@@ -551,11 +511,14 @@
     display: block;
     position: relative;
     padding-left: 35px;
-    cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+
+    &:not(.readonly) {
+      cursor: pointer;
+    }
 
     &[class*='__radio'] {
       margin: 0 24px 12px 0;
@@ -565,7 +528,6 @@
     input {
       position: absolute;
       opacity: 0;
-      cursor: pointer;
       height: 0;
       width: 0;
       &:checked ~ [class*='m-form__customInput'] {
@@ -577,6 +539,9 @@
         &:after {
           display: block;
         }
+      }
+      &:not(:read-only):not(:-moz-read-only) {
+        cursor: pointer;
       }
     }
     [class*='m-form__customInput'] {
