reskin settingsV2 billing section

--- a/src/app/modules/settings-v2/other/blocked-channels/blocked-channels.component.html
+++ b/src/app/modules/settings-v2/other/blocked-channels/blocked-channels.component.html
@@ -48,9 +48,6 @@
   >
   </infinite-scroll>
 </ng-container>
-<div
-  *ngIf="!hasList"
-  class="m-settingsV2__desc m-settingsV2__blockedChannelsNotice"
->
+<div *ngIf="!hasList" class="m-settingsV2__desc m-settingsV2__notice">
   <span>You haven't blocked any channels.</span>
 </div>
