(fix): avatar should not have forward slash before icon

--- a/src/app/modules/suggestions/channel/sidebar.component.html
+++ b/src/app/modules/suggestions/channel/sidebar.component.html
@@ -28,7 +28,7 @@
         <div
           class="m-suggestionsSidebarListItem__avatar"
           [style.background-image]="
-            'url(' + cdnUrl + '/icon/' + suggestion.entity.guid + ')'
+            'url(' + cdnUrl + 'icon/' + suggestion.entity.guid + ')'
           "
         ></div>
         <div class="m-suggestionsSidebarListItem__body">
